# ccdc_roche_scoring

./: Makefile  README.md  environment.yaml  pyproject.toml
ccdc_roche_scoring/: descriptor_dfs.py  docking.py  docking_preparation.py  getreasonabletautomers.py  join_docked_rf_counts.py  join_docking_results.py  pose_processor.py  q_values.py  shape_similarity.py  stat_potential.py  stat_potential_inference.py  template_alignment.py  template_docking_mcs.py  vanilla_docking.py
ccdc_roche_scoring/cli/: __init__.py  gold_dock_cli.py  q_values_cli.py  rescore_cli.py
ccdc_roche_scoring/misc/: generate_metrics_table.py  generate_pdbbind_file_structure.py  generate_pymol_scenes.py  hbond_distances.py  plot_inactives.py  pose_check_standalone.py  prepare_blinded_dataset.py  tSNE_plot.py  template_dock_standalone.py  template_similarity_plot.py
ccdc_roche_scoring/redock_proasis/: analyze_vina_redock_results.py  export_manuscript_examples.py  geometry_analysis.py  q_value_scoring.py  redock.py  score_native_pose.py  write_docked_complexes.py
ccdc_roche_scoring/series_definitions/: magl.json  pde-10.json
moe/pose_processor/: import_pose_processor.sh  import_pose_processor.svl  import_q_values.sh  q_value_analyzer.svl
moe/rf_score/: lsf_input_scoring.sh  lsf_input_scoring_from_gold.sh  lsf_input_scoring_function_refitting.sh  refitting.sh  rescoring_from_gold_workflow.sh  rf_scoring.svl  scoring_function_refitting_from_gold_workflow.sh  scoring_workflow.sh  soap_scoring_client.svl
tests/: test_mcs.py  test_pose_processor.py  test_template_docking.py
(+40 files in other folders)
