[tool.poetry]
name = "ccdc-roche-scoring"
version = "0.1.1"
description = "Template docking, scoring, post-processing with the CSD API, RF and other approaches."
authors = [
    "Andreas Tosstorff <andreas.tosstorff@roche.com>",
    "Bernd Kuhn <bernd.kuhn@roche.com>",
]
readme = "README.md"
packages = [{ include = "ccdc_roche_scoring" }]

[tool.poetry.scripts]
gold-dock = 'ccdc_roche_scoring.cli.gold_dock_cli:gold_dock'
pose-check = 'ccdc_roche_scoring.cli.pose_check_cli:pose_check'
redock-proasis = 'ccdc_roche_scoring.redock_proasis.redock:redock_proasis_entry'
rescore = 'ccdc_roche_scoring.cli.rescore_cli:rescore'
q-values = 'ccdc_roche_scoring.cli.q_values_cli:q_values_csv'

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
matplotlib = ">=3.8.1"
seaborn = ">=0.13.0"
pytest = ">=7.4.3"
pathos = ">=0.3.1"
rf_statistics = ">=0.0"
ccdc_roche_utils = ">=0.0"
pre-commit = ">=3.5.0"
black = ">=23.11.0"
pytest-cov = ">=4.1.0"
yamllint = ">=1.33.0"
click = ">=8.1.7"
bottleneck = ">=1.3.7"
pandas = ">=2.2.0"
tqdm = ">=4.66.4"
umap-learn = ">=0.5.6"
meeko = ">=0.5.1"
llvmlite = ">=0.43.0"
scipy = ">=1.14.1"
rdkit = ">=2024.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
